# dataset-wallker

./: .env-example  .gitignore  README.md  config.yml  pyproject.toml
datasetwalker/backend/: utils.py
datasetwalker/frontend/: s3-test.py  s3_explorer_control.py
datasetwalker/frontend/app/: controls.py  main.py  test.py
