[tool.poetry]
name = "datasetwalker"
version = "0.1.0"
description = ""
authors = ["devtolmachev <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.22.1"
pydicom = "^2.4.4"
pyperclip = "^1.9.0"
pandas = "^2.2.2"
scandir = "^1.10.0"
filetype = "^1.2.0"
humanize = "^4.10.0"
pyautogui = "^0.9.54"
fletcarousel = "^0.0.12"
tempdir = "^0.7.1"
s3fs = "^2024.6.1"
envyaml = "^1.10.211231"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
